[iOS] Codepoints not associated with languages are drawn as boxes https://bugs.webkit.org/show_bug.cgi?id=138906

Patch by Myles C. Maxfield <mmaxfield@apple.com> on 2014-12-15
Reviewed by Darin Adler.

Source/WebCore:

Use SPI CTFontCreateForCharacters(), but only if we don't already know what to do
with the characters.

Test: platform/ios-simulator/fast/text/non-language-font-fallback.html

* platform/graphics/ios/FontCacheIOS.mm:
(WebCore::FontCache::systemFallbackForCharacters):
* platform/spi/cocoa/CoreTextSPI.h:

LayoutTests:

* platform/ios-simulator/fast/text/non-language-font-fallback-expected.html: Added.
* platform/ios-simulator/fast/text/non-language-font-fallback.html: Added.

Canonical link: https://commits.webkit.org/157526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177292 268f45cc-cd09-0410-ab3c-d52691b4dbfc