Source/WebCore/platform/spi/cocoa/CoreTextSPI.h
@@ -90,6 +90,7 @@ CTFontRef CTFontCreatePhysicalFontForCharactersWithLanguage(CTFontRef, const UTF
 bool CTFontIsAppleColorEmoji(CTFontRef);
 bool CTFontDescriptorIsSystemUIFont(CTFontDescriptorRef);
 CTFontRef CTFontCreateForCSS(CFStringRef name, uint16_t weight, CTFontSymbolicTraits, CGFloat size);
+CTFontRef CTFontCreateForCharacters(CTFontRef currentFont, const UTF16Char *characters, CFIndex length, CFIndex *coveredLength);
 
 }
 
